feat: add Spanish docs, logo, .gitignore, demo CLI, and fix test compilation